--- a/about/about.css
+++ b/about/about.css
@@ -14,7 +14,7 @@ body {
   min-height: 100vh;
 }
 
-nav {
+.about-nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -25,11 +25,11 @@ nav {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
-  color:black;
+  color: #000;
 }
 
-nav a:hover {
-  color: #ecf0f1;
+.about-nav a:hover {
+  color: #555;
   border-radius: 5%;
 }
 
@@ -43,7 +43,7 @@ nav a:hover {
 }
 
 .about-card {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #dcdcdc;
   border-radius: 10px;
   padding: 20px;
@@ -61,6 +61,7 @@ nav a:hover {
 
 .about-card h4 {
   margin-bottom: 10px;
+  color: #333;
 }
 
 .about-card img {
@@ -72,16 +73,15 @@ nav a:hover {
 .about-card p {
   font-size: 16px;
   line-height: 1.6;
+  color: #555;
 }
 
 .about-card:hover {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-
 footer {
-  /*background-color: white;*/
-  color:black;
+  color: #333;
   text-align: center;
   padding: 20px 0;
   border: none;
