--- a/login/signin.css
+++ b/login/signin.css
@@ -1,4 +1,4 @@
-.parent-signup {
+.parent-signin {
   position: relative;
   background-image: url("https://png.pngtree.com/background/20211215/original/pngtree-blue-wave-ocean-background-hd-design-picture-image_1461617.jpg");
   background-size: cover;
@@ -9,7 +9,7 @@
   align-items: center;
 }
 
-.signup-container {
+.signin-container {
   width: 100%;
   max-width: 600px;
   background-color: rgba(255, 255, 255, 0.9);
@@ -21,7 +21,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.signup-content {
+.signin-content {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -29,20 +29,20 @@
   width: 100%;
 }
 
-.signup-image {
+.signin-image {
   flex: 1;
   padding: 20px;
   display: flex;
   justify-content: center;
 }
 
-.signup-image img {
+.signin-image img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
 }
 
-.signup-form {
+.signin-form {
   flex: 1;
   padding: 20px;
   display: flex;
@@ -51,19 +51,19 @@
   width: 100%;
 }
 
-.signup-form h2 {
+.signin-form h2 {
   text-align: center;
   margin-bottom: 20px;
 }
 
-.signup-input {
+.signin-input {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 100%;
 }
 
-.signup-button {
+.signin-button {
   padding: 10px;
   background-color: #007bff;
   color: #fff;
@@ -74,7 +74,7 @@
   width: 100%;
 }
 
-.signup-button:hover {
+.signin-button:hover {
   background-color: #0056b3;
 }
 
