--- a/menu/payment.css
+++ b/menu/payment.css
@@ -1,4 +1,3 @@
-/* payment.css */
 body {
   margin: 0;
   padding: 0;
@@ -13,7 +12,9 @@ body {
   justify-content: center;
   height: 100vh;
 }
-
+.pin-validation-error{
+  color: red;
+}
 .payment-content {
   max-width: 700px;
   padding: 20px;
